// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test ConfigValueDisplay when type is not panel-item should render correctly 1`] = `
<div>
  <div>
    UnitInput: 
    mock-input-id
    <p>
      precision: 
      2
    </p>
    <p>
      underline
    </p>
    <p>
      unit: 
      mm
    </p>
    <input
      id="mock-input-id"
      max="100"
      min="0"
      value="5"
    />
  </div>
</div>
`;

exports[`test ConfigValueDisplay when type is panel-item should render correctly 1`] = `
<div>
  <div
    class="input"
  >
    UnitInput: 
    <p>
      precision: 
      2
    </p>
    <input
      max="100"
      min="0"
      value="5"
    />
  </div>
</div>
`;
